[package]
edition = "2021"
name = "quic-implementation"
version = "0.1.0"

[dependencies]
bytes = "1"
envy = "0.4"
futures = "0.3"
h3 = {git = "https://github.com/hyperium/h3"}
http = "0.2"
quinn = "0.8.0"
quinn-proto = "0.8.0"
rcgen = {version = "0.7.0"}
rustls = {version = "0.20", features = ["dangerous_configuration"]}
rustls-native-certs = "0.6"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tracing = "0.1.10"
tracing-subscriber = {version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"]}
webpki = "0.22"
